Fix modals in dark mode, remove Chrome message

--- a/css/dark.css
+++ b/css/dark.css
@@ -6,8 +6,12 @@ body, a {
     color: #FAFAFA;
 }
 
-.card {
+.card, .modal-content {
     background: #3b3b3b;
+}
+
+.btn-close {
+    background-color: #FAFAFA;
 }
 
 input {
